Fix: `overflow-y: auto`を既定値に
`overflow-y: scroll`だとオーバーレイスクロールがうまく効かない
autoでもscrollでも動作は変わらないので変更

--- a/src/_common.scss
+++ b/src/_common.scss
@@ -395,7 +395,7 @@ $z-indexes:(
     height: 0;
     flex-grow: 1;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     position: relative;
     outline: none;
     scroll-snap-type: y mandatory;
